# ERC20-token-detector

./: .gitignore  Dockerfile  README.md  db-deployment.yaml  db-service.yaml  docker-compose.yaml  erc20detector-deployment.yaml  erc20detector-service.yaml  pyproject.toml
src/: alembic.ini
src/erc20detector/application/: get_contract.py  get_contracts.py  process_contract.py  upload_contract.py
src/erc20detector/application/common/: contract_detector.py  contract_gateway.py  dto.py  exceptions.py  request_contract_client.py  source_code_compiler.py
src/erc20detector/domain/contract/entities/: contract.py
src/erc20detector/domain/contract/services/: contract.py
src/erc20detector/domain/contract/value_objects/: processing_status.py
src/erc20detector/infrastructure/common/: exceptions.py
src/erc20detector/infrastructure/contract_detector/erc20/: contract_detector.py  erc20_protocol.py
src/erc20detector/infrastructure/db/: provider.py  uow.py
src/erc20detector/infrastructure/db/migrations/: env.py
src/erc20detector/infrastructure/db/models/: contract.py
src/erc20detector/infrastructure/http_client/: aiohttp_client.py
src/erc20detector/infrastructure/repositories/: contract_gateway.py
src/erc20detector/infrastructure/repositories/converters/: contract.py
src/erc20detector/infrastructure/source_code_compiler/: source_code_compiler.py
src/erc20detector/main/: config.py  ioc.py  web.py
src/erc20detector/presentation/: interactor_factory.py
src/tests/: conftest.py
src/tests/application/: test_upload_contract.py
(+6 files in other folders)
